--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,15 +1,20 @@
 header.header {
-  background: var(--blue);
+  background: var(--purple);
   padding-top: 2rem;
   
   > div {
     max-width: 1120px;
-    margin: 0 auto;
+    margin: 0 auto; 
 
     padding: 2rem 1rem 12rem;
 
     display: flex;
     align-items: center;
     justify-content: center;
+  }
+
+  h1{
+    color: #FFF;
+    font-size: 3rem;
   }
 }
