--- a/src/styles/tasklist.scss
+++ b/src/styles/tasklist.scss
@@ -1,20 +1,21 @@
 section.task-list {
   background: var(--shapes);
+  background: linear-gradient(to right bottom, rgba(255,255,255,.7), rgba(255,255,255,.3));
+  backdrop-filter: blur(2rem);
   border-radius: 1rem;
   
   margin-top: -10rem;
   padding: 70px 60px;
   
-  filter: drop-shadow(0px 24px 64px rgba(0, 0, 0, 0.06));
+  box-shadow: 0 20px 30px rgba($color: #000000, $alpha: .1);
   
   header {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    
+
     h2 {
-      color: var(--text-title);
       font-size: 2.25rem;
     }
 
@@ -23,25 +24,34 @@ section.task-list {
       gap: 0.25rem;
       align-items: center;
 
-      background: #fff;
       font-size: 16px;
       
-      input {
+      input.teste {
+        box-sizing: border-box;
         flex: 1;
         background: var(--background);
-        border: 0;
         color: var(--text);
-        padding: 12px 24px;
-        
+        padding: 12px 10px;
+        transition: all .2s linear;
         border-radius: 8px;
-        border: 0;
+        border: solid 1px rgba(0, 0, 0, 0.2);
+        outline: 0;
+
+        width: 200px;
         
         &::placeholder {
           color: var(--text-light)
         }
+
+        &:focus{
+          border: solid 1px transparentize($color:#4F29F0, $amount: .1);
+          box-shadow: 0 0 0 0.18rem transparentize($color:#4F29F0, $amount: .5);
+          background-color: var(--shapes);
+        }
       }
 
       button {
+        height: 40px;
         font-weight: 600;
         border-radius: 8px;
         border: 0;
@@ -65,96 +75,36 @@ section.task-list {
     margin-top: 3rem;
 
     ul {
+      background-color: var(--shapes);
+      box-shadow: 0 10px 30px rgba(#414856, 0.1);
+      border-radius: 1rem;
       list-style: none;
-  
-      li {
+      padding: .25rem 0;
+
+      li{
+        box-sizing: border-box;
         display: flex;
         justify-content: space-between;
         align-items: center;
-        border-bottom: 1px solid #EBEBEB;
-        padding: 1rem 0;
+        margin: 1rem 0;
+        padding: .5rem 2rem;
 
-        div {
-          display: flex;
-          align-items: center;
-          gap: 14px;
-          outline: 0;
-
-          p {
-            font-size: 1rem;
-            color: var(--text);
-          }
-
-          &.completed {
-            p {
-              text-decoration:line-through;
-              opacity: 0.6;
-            }
-          }
-
-          .checkbox-container {
-            display: block;
-            position: relative;
-            padding-left: 14px;
-            margin-bottom: 18px;
-          
-            input {
-              position: absolute;
-              opacity: 0;
-              cursor: pointer;
-              height: 0;
-              width: 0;
-
-              &:checked {
-                & ~ .checkmark {
-                  background-color: var(--blue);
-                }
-
-                & ~ .checkmark:after {
-                  display: block;
-                }
-              } 
-            }
-          
-            .checkmark {
-              position: absolute;
-              top: 0;
-              left: 0;
-              width: 16px;
-              height: 16px;
-              background-color: var(--background);
-              border-radius: 2px;
-          
-              &:after {
-                content: "";
-                position: absolute;
-                display: none;
-                left: 6px;
-                top: 3px;
-                width: 3px;
-                height: 6px;
-                border: solid white;
-                border-width: 0 2px 2px 0;
-                transform: rotate(45deg);
-              }
-            }
-          }
-        }
-
-        button {
-          background: transparent;
+        button{
+          color: #dc3545;
           border: 0;
-
-          svg {
-            color: var(--red);
+          background-color: transparent;
+          border: solid 1px #dc3545;
+          border-radius: 5px;
+          padding: 5px 5px;
+          transition: all .3s;
+          width: fit-content;
+          height: fit-content;
+  
+          &:hover{
+              background-color: #dc3545;
+              color: #FFF;
           }
-
-          &:hover {
-            svg {
-              filter: brightness(0.5)
-            }
-          }
-        }
+      }
       }
     } 
   }
